# Sfaser25

./: .gitignore  Domande.txt  Face90.m  L11_Code_Documentation.txt  README.md  phase90.ggb
GUI/: pedal3DModel.c4d
JUCE/: CMakeLists.txt
JUCE/Face90/: Face90.jucer
JUCE/Face90/GUI/distressed wood-09-c4d material/: distressed wood-09-c4d material.c4d
JUCE/Face90/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
JUCE/Face90/Source/: FilmStripSlider.cpp  Images.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
JUCE/Sfaser25/: Sfaser25.jucer
JUCE/Sfaser25/Builds/VisualStudio2022/: Face90.sln  Face90_SharedCode.vcxproj  Face90_SharedCode.vcxproj.filters  Face90_StandalonePlugin.vcxproj  Face90_VST3.vcxproj  Sfacer25.sln  Sfacer25_SharedCode.vcxproj  Sfacer25_SharedCode.vcxproj.filters  Sfacer25_StandalonePlugin.vcxproj  Sfacer25_VST3.vcxproj  Sfaser25.sln  Sfaser25_SharedCode.vcxproj  Sfaser25_SharedCode.vcxproj.filters  Sfaser25_StandalonePlugin.vcxproj  Sfaser25_VST3.vcxproj  resources.rc
JUCE/Sfaser25/GUI/Parquet Wood Floor  21-c4d material/: Parquet Wood Floor  21-c4d material.c4d
JUCE/Sfaser25/JuceLibraryCode/: BinaryData.h  JuceHeader.h  JucePluginDefines.h
JUCE/Sfaser25/Source/: Images.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  inputStage.cpp  inputStage.h  outputStage.cpp  outputStage.h  shiftStage.cpp  shiftStage.h
JUCE/Sfaser25/Source/GUI/: Sfaser25LookAndFeel.cpp  Sfaser25LookAndFeel.h
JUCE/Sfaser25/Source/Stages/: InputStage.cpp  InputStage.h  OutputStage.cpp  OutputStage.h  ShiftStage.cpp  ShiftStage.h
JUCE/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
MATLAB/: Face90.asv  Face90.m  Onda_triangolare.m  freqRespSpiceDB.txt  jumpMono.wav.asd  preBJT.txt  testStage.asv  testStage.m
MATLAB/Sfaser25/: idsPlot.m  (+15 more)
Results/: Report.txt
SPICE files/: phase90.asc
(+50 files in other folders)
